@@ -22,12 +22,16 @@ import static org.hamcrest.core.StringContains.containsString;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.LongStream;
 import org.apache.lucene.analysis.Analyzer;
+import org.apache.lucene.analysis.standard.StandardAnalyzer;
 import org.apache.lucene.document.BinaryDocValuesField;
 import org.apache.lucene.document.BinaryPoint;
 import org.apache.lucene.document.Document;
@@ -686,5 +690,107 @@ public class TestMemoryIndex extends LuceneTestCase {
             + "\n"
             + "fields=2, terms=2, positions=3",
         mi.toStringDebug());
+  }
+
+  public void testStoredFields() throws IOException {
+    List<IndexableField> fields = new ArrayList<>();
+    fields.add(new StoredField("float", 1.5f));
+    fields.add(new StoredField("multifloat", 2.5f));
+    fields.add(new StoredField("multifloat", 3.5f));
+    fields.add(new StoredField("long", 10L));
+    fields.add(new StoredField("multilong", 15L));
+    fields.add(new StoredField("multilong", 20L));
+    fields.add(new StoredField("int", 1.7));
+    fields.add(new StoredField("multiint", 2.7));
+    fields.add(new StoredField("multiint", 2.8));
+    fields.add(new StoredField("multiint", 2.9));
+    fields.add(new StoredField("double", 3.7d));
+    fields.add(new StoredField("multidouble", 4.5d));
+    fields.add(new StoredField("multidouble", 4.6d));
+    fields.add(new StoredField("multidouble", 4.7d));
+    fields.add(new StoredField("string", "foo"));
+    fields.add(new StoredField("multistring", "bar"));
+    fields.add(new StoredField("multistring", "baz"));
+    fields.add(new StoredField("binary", "bfoo".getBytes(StandardCharsets.UTF_8)));
+    fields.add(new StoredField("multibinary", "bbar".getBytes(StandardCharsets.UTF_8)));
+    fields.add(new StoredField("multibinary", "bbaz".getBytes(StandardCharsets.UTF_8)));
+
+    Collections.shuffle(fields, random());
+    Document doc = new Document();
+    for (IndexableField f : fields) {
+      doc.add(f);
+    }
+
+    MemoryIndex mi = MemoryIndex.fromDocument(doc, new StandardAnalyzer());
+    Document d = mi.createSearcher().doc(0);
+
+    assertContains(d, "long", 10L, IndexableField::numericValue);
+    assertContains(d, "int", 1.7, IndexableField::numericValue);
+    assertContains(d, "double", 3.7d, IndexableField::numericValue);
+    assertContains(d, "float", 1.5f, IndexableField::numericValue);
+    assertContains(d, "string", "foo", IndexableField::stringValue);
+    assertBinaryContains(d, "binary", new BytesRef("bfoo"));
+
+    assertMultiContains(d, "multilong", new Object[] {15L, 20L}, IndexableField::numericValue);
+    assertMultiContains(d, "multiint", new Object[] {2.7, 2.8, 2.9}, IndexableField::numericValue);
+    assertMultiContains(
+        d, "multidouble", new Object[] {4.5d, 4.6d, 4.7d}, IndexableField::numericValue);
+    assertMultiContains(d, "multifloat", new Object[] {2.5f, 3.5f}, IndexableField::numericValue);
+    assertMultiContains(d, "multistring", new Object[] {"bar", "baz"}, IndexableField::stringValue);
+    assertBinaryMultiContains(
+        d, "multibinary", new BytesRef[] {new BytesRef("bbar"), new BytesRef("bbaz")});
+  }
+
+  private static void assertContains(
+      Document d, String field, Object expected, Function<IndexableField, Object> value) {
+    assertNotNull(d.getField(field));
+    IndexableField[] fields = d.getFields(field);
+    assertEquals(1, fields.length);
+    assertEquals(expected, value.apply(fields[0]));
+  }
+
+  private static void assertBinaryContains(Document d, String field, BytesRef expected) {
+    assertNotNull(d.getField(field));
+    IndexableField[] fields = d.getFields(field);
+    assertEquals(1, fields.length);
+    assertEquals(0, expected.compareTo(fields[0].binaryValue()));
+  }
+
+  private static void assertMultiContains(
+      Document d, String field, Object[] expected, Function<IndexableField, Object> value) {
+    assertNotNull(d.get(field));
+    IndexableField[] fields = d.getFields(field);
+    assertEquals(expected.length, fields.length);
+    for (IndexableField f : fields) {
+      Object actual = value.apply(f);
+      assertTrue(arrayContains(expected, actual));
+    }
+  }
+
+  private static void assertBinaryMultiContains(Document d, String field, BytesRef[] expected) {
+    IndexableField[] fields = d.getFields(field);
+    assertEquals(expected.length, fields.length);
+    for (IndexableField f : fields) {
+      BytesRef actual = f.binaryValue();
+      assertTrue(arrayBinaryContains(expected, actual));
+    }
+  }
+
+  private static boolean arrayContains(Object[] array, Object value) {
+    for (Object o : array) {
+      if (Objects.equals(o, value)) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  private static boolean arrayBinaryContains(BytesRef[] array, BytesRef value) {
+    for (BytesRef b : array) {
+      if (b.compareTo(value) == 0) {
+        return true;
+      }
+    }
+    return false;
   }
 }
