@@ -138,6 +138,8 @@ New Features
 * GITHUB#11929: MMapDirectory gives more granular control on which files to
   preload. (Adrien Grand, Uwe Schindler)
 
+* GITHUB#11999: MemoryIndex now supports stored fields. (Alan Woodward)
+
 Improvements
 ---------------------
 * GITHUB#11778: Detailed part-of-speech information for particle(조사) and ending(어미) on Nori
